<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Movie Catalogue Sub3</string>
    <string name="tab_movie">Movie</string>
    <string name="tab_tvshow">TV Show</string>
    <string name="name">Name</string>
    <string name="overview">Overview</string>
    <string name="title_genre">Genre</string>
    <string name="title_overview">Overview</string>
    <string name="title_release">Release Date</string>
    <string name="img_poster">Poster</string>
    <string name="img_poster_film">Film Poster</string>
    <string name="menu_change_lang">Change Language</string>
    <string name="lang_en">English</string>
    <string name="lang_in">Bahasa Indonesia</string>
    <string name="close">Close</string>
    <string name="choose">Choose</string>
    <string name="tv_release">February 16, 2020</string>
    <string name="tv_name">Film Title</string>
    <string name="tv_genre">Film Genre</string>
    <string name="tv_overview">Film Overview: bla bla bla</string>
</resources>
