<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <ImageView
        android:id="@+id/img_poster"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:scaleType="fitXY"
        android:contentDescription="@string/img_poster_film" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_toEndOf="@id/img_poster"
        android:text="@string/name"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_overview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_name"
        android:layout_marginStart="26dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@id/img_poster"
        android:ellipsize="end"
        android:maxLines="3"
        android:text="@string/overview" />

</RelativeLayout>