<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_poster"
            android:layout_width="208dp"
            android:layout_height="313dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/img_poster_film"
            android:scaleType="fitXY"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/poster_bumblebee" />

        <TextView
            android:id="@+id/tv_title_release"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/img_poster"
            android:text="@string/title_release"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/img_poster"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp" />

        <TextView
            android:id="@+id/tv_release"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_title_release"
            android:layout_toEndOf="@id/img_poster"
            android:text="@string/tv_release"
            app:layout_constraintStart_toEndOf="@id/img_poster"
            app:layout_constraintTop_toBottomOf="@id/tv_title_release"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="4dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_release"
            android:layout_toEndOf="@id/img_poster"
            android:text="@string/tv_name"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@id/img_poster"
            app:layout_constraintTop_toBottomOf="@id/tv_release"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:lineSpacingMultiplier="1" />

        <TextView
            android:id="@+id/tv_title_genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_genre"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_poster"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" />

        <TextView
            android:id="@+id/tv_genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_genre"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_genre"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:lineSpacingMultiplier="1" />

        <TextView
            android:id="@+id/tv_title_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_overview"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_genre"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" />

        <TextView
            android:id="@+id/tv_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_overview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title_overview"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:lineSpacingMultiplier="1" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>